--- a/index.html
+++ b/index.html
@@ -2,9 +2,27 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Chào mừng đến với Website của tôi!</title>
+  <title>Trang web cá nhân</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Xin chào! Đây là trang web GitHub Pages đầu tiên của tôi.</h1>
+  <header>
+    <h1>Xin chào!</h1>
+    <p>Chào mừng bạn đến với website của tôi.</p>
+  </header>
+  <nav>
+    <a href="#">Trang chủ</a>
+    <a href="#">Giới thiệu</a>
+    <a href="#">Liên hệ</a>
+  </nav>
+  <main>
+    <section>
+      <h2>Đây là phần nội dung chính</h2>
+      <p>Bạn có thể thay đổi nội dung này theo ý muốn.</p>
+    </section>
+  </main>
+  <footer>
+    &copy; 2025 bởi datdatnguyen2609
+  </footer>
 </body>
 </html>
